--- a/app.html
+++ b/app.html
@@ -3,16 +3,13 @@
 <head>
   <meta charset="utf-8"/>
   <!-- Google Analytics (GA4) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-F12747YWBN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-F12747YWBN', {
-    anonymize_ip: true
-  });
-</script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F12747YWBN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-F12747YWBN', { anonymize_ip: true });
+  </script>
 
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>ProfitPilot — App</title>
@@ -660,24 +657,24 @@
     const TRIAL_BULK_MAX_ROWS = 3;
     const TRIAL_BULK_RUNS_PER_DAY = 1;
 
+    // IMPORTANT: do NOT set custom storageKey unless login.html uses the same key.
     const supabase = createClient(SUPABASE_URL, SUPABASE_ANON, {
-  auth: {
-    persistSession: true,
-    autoRefreshToken: true,
-    detectSessionInUrl: true,
-    flowType: "pkce",
-    storageKey: "profitpilot_auth"
-  }
-});
-// --- GA4 tracking helper ---
-function track(eventName, params = {}) {
-  try {
-    if (typeof gtag === "function") gtag("event", eventName, params);
-  } catch (e) {}
-}
-document.getElementById("buyProBtn")?.addEventListener("click", () => {
-  track("buy_pro_clicked");
-});
+      auth: {
+        persistSession: true,
+        autoRefreshToken: true,
+        detectSessionInUrl: true,
+        flowType: "pkce"
+      }
+    });
+
+    // --- GA4 tracking helper ---
+    function track(eventName, params = {}) {
+      try { if (typeof gtag === "function") gtag("event", eventName, params); } catch (e) {}
+    }
+
+    document.getElementById("buyProBtn")?.addEventListener("click", () => {
+      track("buy_pro_clicked");
+    });
 
     // DOM
     const accessPill = document.getElementById("accessPill");
@@ -718,17 +715,6 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     const fxRow = document.getElementById("fxRow");
     const fxOut = document.getElementById("fxOut");
     const fxNote = document.getElementById("fxNote");
-
-    function maskEmail(email){
-  const e = String(email || "");
-  const [u, d] = e.split("@");
-  if (!u || !d) return "";
-  const uMasked = u.length <= 2 ? (u[0] + "•") : (u.slice(0,2) + "•••");
-  const dParts = d.split(".");
-  const dMasked = dParts.length ? (dParts[0].slice(0,2) + "•••") : "•••";
-  const tld = dParts.length > 1 ? "." + dParts.slice(1).join(".") : "";
-  return `${uMasked}@${dMasked}${tld}`;
-}
 
     // Insights
     const insStatus = document.getElementById("insStatus");
@@ -996,9 +982,9 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
 
       if (profile.paid){
         if (!window.__ppProTracked) {
-  window.__ppProTracked = true;
-  track("pro_user_active");
-}
+          window.__ppProTracked = true;
+          track("pro_user_active");
+        }
         accessPill.textContent = "Unlocked (PRO)";
         accessPill.className = "pill ok";
         reverseUsesLine.textContent = "Reverse uses: Unlimited (PRO)";
@@ -1065,7 +1051,7 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     }
 
     document.getElementById("exportCsvBtn").addEventListener("click", ()=>{
-  track("export_csv_clicked", { mode: MODE, pro: !!CURRENT_PROFILE?.paid });
+      track("export_csv_clicked", { mode: MODE, pro: !!CURRENT_PROFILE?.paid });
       const p = payload();
       const rows = Object.entries(p).map(([k,v])=>[k,String(v ?? "")]);
       rows.unshift(["Field","Value"]);
@@ -1075,7 +1061,7 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     });
 
     pdfBtn.addEventListener("click", ()=>{
-  track("export_pdf_clicked", { pro: !!CURRENT_PROFILE?.paid });
+      track("export_pdf_clicked", { pro: !!CURRENT_PROFILE?.paid });
       if (!CURRENT_PROFILE?.paid){ shareStatus.textContent="PDF is PRO."; return; }
       shareStatus.textContent="Preparing PDF…";
       setTimeout(()=>window.print(), 150);
@@ -1088,7 +1074,7 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     }
 
     shareBtn.addEventListener("click", ()=>{
-  track("share_clicked", { pro: !!CURRENT_PROFILE?.paid });
+      track("share_clicked", { pro: !!CURRENT_PROFILE?.paid });
       if (!CURRENT_PROFILE?.paid){ shareStatus.textContent="Share is PRO."; return; }
       const token = base64urlEncode(JSON.stringify(payload()));
       const url = `${location.origin}/share.html#s=${token}`;
@@ -1287,7 +1273,7 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     }
 
     runCompBtn.addEventListener("click", async ()=>{
-  track("competitor_run_clicked", { pro: !!CURRENT_PROFILE?.paid });
+      track("competitor_run_clicked", { pro: !!CURRENT_PROFILE?.paid });
       compToast.textContent = "Running…";
       try{
         if (!CURRENT_PROFILE) throw new Error("Loading… try again in 2 seconds.");
@@ -1549,7 +1535,7 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     bulkApplyFeesBtn.addEventListener("click", ()=>applyFeesToAll());
 
     bulkRunBtn.addEventListener("click", async ()=>{
-  track("bulk_run_clicked", { pro: !!CURRENT_PROFILE?.paid, rows: rowCount() });
+      track("bulk_run_clicked", { pro: !!CURRENT_PROFILE?.paid, rows: rowCount() });
       try{
         if (!CURRENT_PROFILE){ bulkStatus.textContent="Loading…"; return; }
 
@@ -1661,7 +1647,7 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     });
 
     document.getElementById("sendReview").addEventListener("click", async ()=>{
-  track("review_submit_clicked", { pro: !!CURRENT_PROFILE?.paid, stars: selectedStars });
+      track("review_submit_clicked", { pro: !!CURRENT_PROFILE?.paid, stars: selectedStars });
       reviewStatus.textContent="Submitting…";
       try{
         const { data: { user } } = await supabase.auth.getUser();
@@ -1682,7 +1668,7 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     });
 
     document.getElementById("logoutBtn").addEventListener("click", async ()=>{
-  track("logout_clicked", { pro: !!CURRENT_PROFILE?.paid });
+      track("logout_clicked", { pro: !!CURRENT_PROFILE?.paid });
       await supabase.auth.signOut();
       location.href = "login.html";
     });
@@ -1746,8 +1732,8 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     }
 
     document.getElementById("calcBtn").addEventListener("click", async ()=>{
-  track("calc_clicked", { mode: MODE, pro: !!CURRENT_PROFILE?.paid });
-  try{
+      track("calc_clicked", { mode: MODE, pro: !!CURRENT_PROFILE?.paid });
+      try{
         o1hint.style.color = "";
         if (MODE==="reverse") await computeReverseWithLimit();
         else { computeProfit(); refreshInsights(); }
@@ -1761,17 +1747,26 @@ document.getElementById("buyProBtn")?.addEventListener("click", () => {
     (async ()=>{
       try{
         accessPill.textContent="Checking session…";
-        const { data: { session } } = await supabase.auth.getSession();
-        if (!session){ location.href="login.html"; return; }
 
+        // Robust auth check: session OR user
+        const { data: { session } } = await supabase.auth.getSession();
         const { data: { user } } = await supabase.auth.getUser();
-        if (!user){ location.href="login.html"; return; }
+
+        if (!session && !user){
+          location.href="login.html";
+          return;
+        }
+
+        if (!user){
+          location.href="login.html";
+          return;
+        }
+
         CURRENT_USER = user;
-// Privacy: never show full email in UI
-const accountLink = document.getElementById("accountLink");
-if (accountLink){
-  accountLink.textContent = "Account";
-}
+
+        // Privacy: never show full email in UI
+        const accountLink = document.getElementById("accountLink");
+        if (accountLink) accountLink.textContent = "Account";
 
         const prof = await rpcEnsureProfile();
         updateAccessUI(prof);
@@ -1787,12 +1782,11 @@ if (accountLink){
         useSuggestedBtn.disabled = true;
 
         tryImportFromHash();
-     } catch(e){
-  console.error("BOOT ERROR:", e);
-  accessPill.textContent = "Access check failed: " + (e?.message || "unknown");
-  accessPill.className = "pill bad";
-}
-
+      } catch(e){
+        console.error("BOOT ERROR:", e);
+        accessPill.textContent = "Access check failed: " + (e?.message || "unknown");
+        accessPill.className = "pill bad";
+      }
     })();
   </script>
 </body>
