--- a/app.html
+++ b/app.html
@@ -124,6 +124,11 @@
   border-radius:22px;
   padding:22px;
 }
+    
+#calcCard{
+  background:linear-gradient(180deg, rgba(255,255,255,.95), rgba(255,255,255,.85));
+  border:1px solid rgba(14,165,164,.22);
+}
 
 .title{
   font-size:18px;
@@ -302,7 +307,8 @@
 
     <div class="grid">
       <!-- LEFT -->
-      <div class="card">
+     <div class="card" id="calcCard">
+
         <div class="title">Calculator</div>
         <div class="small">Profit = normal. Reverse = target profit → required selling price. Bulk = multiple items.</div>
 
